_build/_log
### Starting build.
# Target: ford.ml.depends, tags: { extension:ml, file:ford.ml, ocaml, ocamldep, quiet }
/Users/clemencelemeilleur/.opam/default/bin/ocamldep.opt -modules ford.ml > ford.ml.depends
+ /Users/clemencelemeilleur/.opam/default/bin/ocamldep.opt -modules ford.ml > ford.ml.depends
File "ford.ml", line 11, characters 34-35:
11 |     gmap gr (fun label -> {flot : 0 ; capacite : label})
                                       ^
Error: Syntax error
Command exited with code 2.
# Compilation unsuccessful.
